--- a/index.html
+++ b/index.html
@@ -1,316 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Line Follower TED 2023</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-    <link rel="icon" type="image/x-icon" href="logo (1).png" />
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Open+Sans:wght@600&display=swap");
-      * {
-        font-family: "Open Sans", sans-serif;
-      }
-      ::-webkit-scrollbar {
-        display: none;
-      }
-      .bod {
-        background-color: #173645;
-        background-image: url("pattern.svg");
-      }
-      .leftCard,
-      .rightCard {
-        border: none;
-        font-weight: 500;
-        color: white;
-      }
-      #startButton .card {
-        background-color: #ffb803;
-        color: white;
-        box-shadow: -2px -1px 17px 1px rgba(255, 183, 3, 0.8);
-        -webkit-box-shadow: -2px -1px 17px 1px rgba(255, 183, 3, 0.8);
-        -moz-box-shadow: -2px -1px 17px 1px rgba(255, 183, 3, 0.8);
-      }
-      .bgUtama {
-        position: fixed;
-        width: 30vw;
-        left: 35vw;
-        top: 10vh;
-      }
-      .rightCard {
-        background: linear-gradient(
-          235deg,
-          rgba(216, 17, 89, 1) 0%,
-          rgba(236, 139, 51, 1) 100%
-        );
-      }
-      .leftCard {
-        background: linear-gradient(
-          135deg,
-          rgba(216, 17, 89, 1) 0%,
-          rgba(236, 139, 51, 1) 100%
-        );
-      }
-      .stopPoint,
-      p {
-        font-family: "Black Han Sans";
-      }
-    </style>
-  </head>
-  <body class="bod">
-    <img class="bgUtama" src="logo.png" alt="" />
-    <div class="container text-center pt-5">
-      <div class="row">
-        <div class="col-sm-6 mt-3 mt-sm-0">
-          <div class="card leftCard">
-            <div class="card-body">
-              <select
-                id="namaTim1"
-                class="form-select text-center"
-                aria-label="Default select example"
-                style="background-color: #173645; border: none; color: white"
-              >
-                <option>Nama Tim</option>
-                <option value="Artic Orion">Artic Orion</option>
-                <option value="Artic Orions">Artic Orions</option>
-                <option value="AZTEK">AZTEK</option>
-                <option value="Cukurukuk">Cukurukuk</option>
-                <option value="Elfath Robotic">Elfath Robotic</option>
-                <option value="Ganesis">Ganesis</option>
-                <option value="Ichibot Zed">Ichibot Zed</option>
-                <option value="Magnum Saber">Magnum Saber</option>
-                <option value="Manduwo_Robo">Manduwo_Robo</option>
-                <option value="ManggaTech">ManggaTech</option>
-                <option value="Marbot">Marbot</option>
-                <option value="RAYDEN">RAYDEN</option>
-                <option value="RR Arepo">RR Arepo</option>
-                <option value="RR Blacksweet">RR Blacksweet</option>
-                <option value="RR Cipunk">RR Cipunk</option>
-                <option value="RR FDW">RR FDW</option>
-                <option value="RR Itachi">RR Itachi</option>
-                <option value="RR Kenzzz">RR Kenzzz</option>
-                <option value="RR MADU HITAM">RR MADU HITAM</option>
-                <option value="RR MUKIDI">RR MUKIDI</option>
-                <option value="RR NEXUS">RR NEXUS</option>
-                <option value="RR Trial Driver">RR Trial Driver</option>
-                <option value="RR Trifecta">RR Trifecta</option>
-                <option value="RR VENDETA">RR VENDETA</option>
-                <option value="RR YKZ">RR YKZ</option>
-                <option value="RR YuDeX">RR YuDeX</option>
-                <option value="RR ZEUS">RR ZEUS</option>
-                <option value="TeroMangga">TeroMangga</option>
-                <option value="Wanayya Racing Team">Wanayya Racing Team</option>
-                <option value="YPF Royale">YPF Royale</option>
-                <option value="ZERO'">ZERO'</option>
-              </select>
-              <p style="font-size: 70pt" class="timeStop">00 : 00 : 00</p>
-            </div>
-          </div>
-          <div
-            class="btn btn-warning pinButton mt-2"
-            style="visibility: hidden"
-          >
-            Checkpoint
-          </div>
-        </div>
-        <div class="col-sm-6 mt-3 mt-sm-0">
-          <div class="card rightCard">
-            <div class="card-body">
-              <select
-                id="namaTim2"
-                class="form-select text-center"
-                style="background-color: #173645; border: none; color: white"
-              >
-                <option>Nama Tim</option>
-                <option value="Artic Orion">Artic Orion</option>
-                <option value="Artic Orions">Artic Orions</option>
-                <option value="AZTEK">AZTEK</option>
-                <option value="Cukurukuk">Cukurukuk</option>
-                <option value="Elfath Robotic">Elfath Robotic</option>
-                <option value="Ganesis">Ganesis</option>
-                <option value="Ichibot Zed">Ichibot Zed</option>
-                <option value="Magnum Saber">Magnum Saber</option>
-                <option value="Manduwo_Robo">Manduwo_Robo</option>
-                <option value="ManggaTech">ManggaTech</option>
-                <option value="Marbot">Marbot</option>
-                <option value="RAYDEN">RAYDEN</option>
-                <option value="RR Arepo">RR Arepo</option>
-                <option value="RR Blacksweet">RR Blacksweet</option>
-                <option value="RR Cipunk">RR Cipunk</option>
-                <option value="RR FDW">RR FDW</option>
-                <option value="RR Itachi">RR Itachi</option>
-                <option value="RR Kenzzz">RR Kenzzz</option>
-                <option value="RR MADU HITAM">RR MADU HITAM</option>
-                <option value="RR MUKIDI">RR MUKIDI</option>
-                <option value="RR NEXUS">RR NEXUS</option>
-                <option value="RR Trial Driver">RR Trial Driver</option>
-                <option value="RR Trifecta">RR Trifecta</option>
-                <option value="RR VENDETA">RR VENDETA</option>
-                <option value="RR YKZ">RR YKZ</option>
-                <option value="RR YuDeX">RR YuDeX</option>
-                <option value="RR ZEUS">RR ZEUS</option>
-                <option value="TeroMangga">TeroMangga</option>
-                <option value="Wanayya Racing Team">Wanayya Racing Team</option>
-                <option value="YPF Royale">YPF Royale</option>
-                <option value="ZERO'">ZERO'</option>
-              </select>
-              <p style="font-size: 70pt" class="timeStop">00 : 00 : 00</p>
-            </div>
-          </div>
-          <div
-            class="btn btn-warning pinButton mt-2"
-            style="visibility: hidden"
-          >
-            Checkpoint
-          </div>
-        </div>
-      </div>
-      <div class="row py-0" id="startButton">
-        <div class="col-sm-12 mt-1 mt-sm-0">
-          <div class="card">
-            <div class="card-body">
-              <h3>Mulai</h3>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div style="display: none" class="row py-0" id="saveButton">
-        <!-- <div class="col-sm-12 mt-1 mt-sm-0">
-          <div class="card">
-            <div class="card-body">
-              <h3></h3>
-            </div>
-          </div>
-        </div> -->
-      </div>
-    </div>
-    <div class="container text-center">
-      <div class="row">
-        <div class="col-6 mt-1 cekText d-flex flex-column-reverse"></div>
-        <div class="col-6 mt-1 cekText d-flex flex-column-reverse"></div>
-      </div>
-    </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-      integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-      crossorigin="anonymous"
-    ></script>
-    <script>
-      const timeStop = document.querySelectorAll(".timeStop");
-const cekText = document.querySelectorAll(".cekText");
-const pinButton = document.querySelectorAll(".pinButton");
-const startButton = document.getElementById("startButton");
-const saveButton = document.getElementById("saveButton");
-const opsi = document.querySelectorAll("select");
-let babak = "penyisihan";
-let stopBut = 1;
-const checkpoint = 4;
-let dataWaktu = [[], []];
-// tombol mulai
-startButton.addEventListener("click", () => {
-  let namaTim1 = document.querySelector("#namaTim1").value;
-  let namaTim2 = document.querySelector("#namaTim2").value;
-  if (namaTim1 == "Nama Tim" || namaTim2 == "Nama Tim") {
-    alert("Pilih nama tim terlebih dahulu");
-    return;
-  }
-  stopBut = setInterval(stopwatch, 10);
-  startButton.style.display = "none";
-  pinButton.forEach((e) => (e.style.visibility = "visible"));
-});
-
-// cekpoin awal
-let cekStat = [1, 1];
-
-// tombol cekpoin ditekan
-pinButton.forEach((i, f) => {
-  i.addEventListener("click", (e) => {
-    if (startButton.style.display == "none") {
-      i.innerHTML == "Finish" ? finishButton(f) : console.log();
-      cekText[f].innerHTML +=
-        i.innerHTML == "Finish"
-          ? `<div class="card ${f == 0 ? "leftCard" : "rightCard"} my-3 text-${
-              f == 0 ? "start" : "end"
-            }"><div class="card-body"><h3 class="stopPoint">Finish</h3><h4 class="stopPoint">${
-              timeStop[f].innerHTML
-            }</h4></div></div>`
-          : `<div class="card ${f == 0 ? "leftCard" : "rightCard"} my-3 text-${
-              f == 0 ? "start" : "end"
-            }"><div class="card-body"><h3 class="stopPoint">Checkpoint ${
-              cekStat[f]
-            }</h3><h4 class="stopPoint">${
-              timeStop[f].innerHTML
-            }</h4></div></div>`;
-      cekStat[f] += 1;
-      dataWaktu[f].push(timeStop[f].innerHTML);
-      i.innerHTML = cekStat[f] > checkpoint ? "Finish" : "Checkpoint";
-      selesai() ? clearInterval(stopBut) : console.log();
-      saveButton.style.display =
-        pinButton[0].style.visibility == "hidden" &&
-        pinButton[1].style.visibility == "hidden"
-          ? "unset"
-          : "none";
-    }
-  });
-});
-// tombol finish ditekan
-function finishButton(ind) {
-  let baru = document.createElement("p");
-  baru.style.fontSize = "70pt";
-  baru.innerHTML = timeStop[ind].innerHTML;
-  timeStop[ind].parentNode.replaceChild(baru, timeStop[ind]);
-  pinButton[ind].style.visibility = "hidden";
-}
-// stopwatch awal
-let realTime = [0, 0, 0, 0];
-function stopwatch() {
-  realTime[0] += 1;
-  if (realTime[0] > 99) {
-    realTime[1] += 1;
-    realTime[0] = 0;
-  }
-  if (realTime[1] > 59) {
-    realTime[2] += 1;
-    realTime[1] = 0;
-  }
-  realTime[3] += 1;
-  timeStop.forEach(
-    (e) =>
-      (e.innerHTML = `${realTime[2].toString().padStart(2, "0")} : ${realTime[1]
-        .toString()
-        .padStart(2, "0")} : ${realTime[0].toString().padStart(2, "0")}`)
-  );
-}
-
-function selesai() {
-  let startu = true;
-  pinButton.forEach((e) => (startu = e.style.display == "none" ? true : false));
-  return startu;
-}
-
-document.addEventListener("keyup", (e) => {
-  e.key == "ArrowLeft" ? pinButton[0].click() : console.log();
-  e.key == "ArrowRight" ? pinButton[1].click() : console.log();
-  e.key == " " && startButton.style.display != "none"
-    ? startButton.click()
-    : console.log();
-});
-opsi.forEach((e) => {
-  e.addEventListener("change", (f) => {
-    f.target.setAttribute("disabled", "true");
-  });
-});
-
-    </script>
-  </body>
-</html>
+<script>
+  window.location.href = "http://d-arsya.epizy.com/ijazah/"
+</script>
